src/info.css
.container {
  display: grid;
  grid-template-areas:
    "header header header"
    "sidenav content content"
    "sidenav content content";
  grid-template-columns: 1fr 4fr 1fr;
  grid-template-rows: 2fr 8fr 1fr;
  min-height: 100vh;
  
  overflow: auto;
  gap: 3px;
  background-color: black;
  padding: 5px;
}
.container div {
  background-color: white;
  padding: 10px;
}
.container div.header {
  grid-area: header;
  text-align: center;
  font-family: 'Playfair Display', 'Arial Narrow', Arial, sans-serif;
  background-color: #FDF2F9;
}
.container div.sidenav {
  grid-area: sidenav;
  background-color: #FFDFF4;
}

.container div.sidenav a{
  text-decoration: none;
  font-size: 16px;
  color: black;
}

.container div.sidenav a:hover{
  color: #f1f1f1;
}

.container div.content {
  grid-area: content;
  font-family: 'Inter';
  background-color: #D8D8E9;
  
}

h3 {
  text-align: center;
  font-family: 'Playfair Display';
}

h2 {
  text-align: left;
}

.headerText {
  background-color: #FDF2F9;
  font-size: 24px;
  border: none;
}

.projectOne {
  border: none;
  width: 25%;
  height: 25%;
  display: inline-block;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
  border-radius: 15%;
  padding: 10px 5px;
  background-color: #FFEFEF;
}

